--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/identity-obj-proxy": "^3.0.2",
         "@types/jest": "^29.5.14",
+        "@types/json-schema": "^7.0.15",
         "@types/license-checker": "^25.0.6",
         "@types/localized-countries": "^2.0.3",
         "@types/lucene-escape-query": "^1.0.2",
