--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     },
     "scripts": {
         "start": "vite",
+        "start:dev": "POWSYBL_NETWORK_VIEWER_PATH=/home/bouzolssyl/Projects/Powsybl/powsybl-network-viewer vite --config vite.config_dev.ts",
         "start:open": "vite --open",
         "build": "tsc && vite build",
         "serve": "vite preview",
@@ -119,6 +120,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "license-checker": "^25.0.1",
         "prettier": "^3.5.3",
+        "prettier-plugin-glsl": "^0.2.1",
         "prettier-plugin-properties": "^0.3.0",
         "svgo": "^3.3.2",
         "ts-node": "^10.9.2",
