--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@gridsuite/commons-ui": "0.126.0",
+        "@gridsuite/commons-ui": "file:../commons-ui/gridsuite-commons-ui-0.126.0.tgz",
         "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^4.1.3",
         "@mui/icons-material": "^5.18.0",
@@ -21,7 +21,7 @@
         "@mui/x-tree-view": "^7.29.1",
         "@powsybl/network-viewer": "1.11.0",
         "@reduxjs/toolkit": "^2.9.0",
-        "@svgdotjs/svg.js": "^3.2.4",
+        "@svgdotjs/svg.js": "^3.2.5",
         "@xyflow/react": "^12.8.4",
         "ag-grid-community": "^33.1.0",
         "ag-grid-react": "^33.3.2",
@@ -120,7 +120,7 @@
         "license-checker": "^25.0.1",
         "prettier": "^3.6.2",
         "prettier-plugin-properties": "^0.3.0",
-        "svgo": "^3.3.2",
+        "svgo": "^4.0.0",
         "ts-node": "^10.9.2",
         "type-fest": "^4.41.0",
         "typescript": "~5.6.3",
