chore(): Add vite config to set `lintOnStart` to a new script `npm run start:lint`
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     },
     "scripts": {
         "start": "vite",
+        "start:lint": "vite --config vite.config-lint.ts",
         "start:open": "vite --open",
         "build": "tsc && vite build",
         "serve": "vite preview",
