remove eslint extension from vite config it will be called separatly
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
 
 jobs:
-  build:
+  build: 
+    # TODO replace ref when powsybl/github-ci#62 is merged
     uses: powsybl/github-ci/.github/workflows/build-frontend-app-generic.yml@aaae75875296657028f2805e7a3fbdb1418b8b95
     with:
       dockerImage: gridsuite/gridstudy-app
