--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   run-patch:
+    # TODO replace ref when powsybl/github-ci#62 is merged
     uses: powsybl/github-ci/.github/workflows/patch-frontend-app-generic.yml@aaae75875296657028f2805e7a3fbdb1418b8b95
     with:
       releaseVersion: ${{ github.event.inputs.releaseVersion }}
