undo last commit

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "@mui/material": "^5.18.0",
         "@mui/x-charts": "^7.29.1",
         "@mui/x-tree-view": "^7.29.1",
-        "@powsybl/network-map-layers": "file:/home/jeandatcar/Projects/front-dev/powsybl-network-viewer/powsybl-network-map-layers-1.7.106.tgz",
-        "@powsybl/network-viewer": "file:/home/jeandatcar/Projects/front-dev/powsybl-network-viewer/powsybl-network-viewer-1.13.0-dev.006.tgz",
+        "@powsybl/network-viewer": "1.12.0",
         "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
         "@xyflow/react": "^12.8.4",
