fix after merge
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "@mui/material": "^5.18.0",
         "@mui/x-charts": "^7.29.1",
         "@mui/x-tree-view": "^7.29.1",
-        "@powsybl/network-viewer": "file:../../powsybl/powsybl-network-viewer/powsybl-network-viewer-2.1.0-dev.0.tgz",
+        "@powsybl/network-map-layers": "file:../../../powsybl/powsybl-network-viewer/powsybl-network-map-layers-2.1.0-dev.0.tgz",
+        "@powsybl/network-viewer": "file:../../../powsybl/powsybl-network-viewer/powsybl-network-viewer-2.1.0-dev.0.tgz",
         "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
         "@xyflow/react": "^12.8.4",
