--- a/package.json
+++ b/package.json
@@ -66,11 +66,14 @@
     "scripts": {
         "start": "vite",
         "start:open": "vite --open",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "serve": "vite preview",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0",
+        "type-check": "tsc",
+        "prebuild": "npm run lint && npm run type-check",
+        "lint": "eslint . --max-warnings 0",
+        "lint:fix": "eslint . --fix",
         "lint:format": "prettier --check --cache .",
         "licenses-check": "license-checker --summary --excludePrivatePackages --production --onlyAllow \"$( jq -r .onlyAllow[] license-checker-config.json | tr '\n' ';')\" --excludePackages \"$( jq -r .excludePackages[] license-checker-config.json | tr '\n' ';')\""
     },
@@ -80,6 +83,9 @@
         "@babel/preset-env": "^7.28.3",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
+        "@eslint/compat": "^1.4.0",
+        "@eslint/js": "^9.38.0",
+        "@stylistic/eslint-plugin": "^3.1.0",
         "@types/core-js": "^2.5.8",
         "@types/eslint": "^8.56.12",
         "@types/eslint-config-prettier": "^6.11.3",
@@ -89,7 +95,7 @@
         "@types/license-checker": "^25.0.6",
         "@types/localized-countries": "^2.0.3",
         "@types/lucene-escape-query": "^1.0.2",
-        "@types/node": "^22.18.1",
+        "@types/node": "^24.9.1",
         "@types/plotly.js-basic-dist-min": "^2.12.4",
         "@types/qs": "^6.14.0",
         "@types/react": "^18.3.24",
@@ -98,22 +104,19 @@
         "@types/react-plotly.js": "^2.6.3",
         "@types/react-resizable": "^3.0.8",
         "@types/react-window": "^1.8.8",
-        "@typescript-eslint/eslint-plugin": "^7.18.0",
-        "@typescript-eslint/parser": "^7.18.0",
         "@vitejs/plugin-react": "^4.7.0",
         "babel-eslint": "^10.1.0",
         "babel-preset-vite": "^1.1.3",
-        "eslint": "^8.57.1",
+        "eslint": "^9.38.0",
+        "eslint-config-airbnb-extended": "^2.3.2",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-config-react-app": "^7.0.1",
-        "eslint-import-resolver-typescript": "3.8.3",
-        "eslint-plugin-flowtype": "^8.0.3",
-        "eslint-plugin-import": "^2.32.0",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import-x": "^4.16.1",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.20",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react-refresh": "^0.4.24",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.1.3",
         "jest-environment-jsdom": "^30.1.2",
@@ -122,9 +125,10 @@
         "prettier-plugin-properties": "^0.3.0",
         "ts-node": "^10.9.2",
         "type-fest": "^4.41.0",
-        "typescript": "~5.6.3",
+        "typescript": "~5.9.3",
+        "typescript-eslint": "^8.46.2",
         "vite": "^6.3.6",
-        "vite-plugin-eslint": "^1.8.1",
+        "vite-plugin-checker": "^0.8.0",
         "vite-plugin-svgr": "^4.5.0",
         "vite-tsconfig-paths": "^5.1.4"
     }
