Test fix sonar for coverage
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=gridsuite_gridstudy-app
 sonar.organization=gridsuite
 sonar.projectBaseDir=src
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=../coverage/lcov.info
 sonar.cpd.exclusions=**/translations/**,**/*css-vars.ts
