--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
         "ts-node": "^10.9.2",
         "type-fest": "^4.41.0",
         "typescript": "~5.9.3",
+        "typescript-eslint": "^8.46.2",
         "vite": "^7.1.12",
         "vite-plugin-checker": "^0.8.0",
         "vite-plugin-svgr": "^4.5.0",
