--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "node": ">=22",
         "npm": "^10.9.2"
     },
+    "_comments": {
+        "rimraf": "TEMP: Required by @powsybl/network-viewer@2.x postinstall script to fix deck.gl@8 type conflicts. Remove when upgrading to network-viewer with deck.gl@9"
+    },
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
@@ -66,11 +69,14 @@
     "scripts": {
         "start": "vite",
         "start:open": "vite --open",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "serve": "vite preview",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "lint": "eslint . --ext js,mjs,jsx,ts,mts,tsx --max-warnings 0",
+        "type-check": "tsc",
+        "prebuild": "npm run lint && npm run type-check",
+        "lint": "eslint . --max-warnings 0",
+        "lint:fix": "eslint . --fix",
         "lint:format": "prettier --check --cache .",
         "licenses-check": "license-checker --summary --excludePrivatePackages --production --onlyAllow \"$( jq -r .onlyAllow[] license-checker-config.json | tr '\n' ';')\" --excludePackages \"$( jq -r .excludePackages[] license-checker-config.json | tr '\n' ';')\""
     },
@@ -80,6 +86,7 @@
         "@babel/preset-env": "^7.28.3",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
+        "@eslint/js": "^9.38.0",
         "@types/core-js": "^2.5.8",
         "@types/eslint": "^8.56.12",
         "@types/eslint-config-prettier": "^6.11.3",
@@ -98,33 +105,32 @@
         "@types/react-plotly.js": "^2.6.3",
         "@types/react-resizable": "^3.0.8",
         "@types/react-window": "^1.8.8",
-        "@typescript-eslint/eslint-plugin": "^7.18.0",
-        "@typescript-eslint/parser": "^7.18.0",
         "@vitejs/plugin-react": "^5.0.4",
         "babel-eslint": "^10.1.0",
         "babel-preset-vite": "^1.1.3",
-        "eslint": "^8.57.1",
+        "eslint": "^9.38.0",
+        "eslint-config-airbnb-extended": "^2.3.2",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-config-react-app": "^7.0.1",
-        "eslint-import-resolver-typescript": "3.8.3",
-        "eslint-plugin-flowtype": "^8.0.3",
-        "eslint-plugin-import": "^2.32.0",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import-x": "^4.16.1",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.20",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-react-refresh": "^0.4.24",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.1.3",
         "jest-environment-jsdom": "^30.1.2",
         "license-checker": "^25.0.1",
         "prettier": "^3.6.2",
         "prettier-plugin-properties": "^0.3.0",
+        "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
         "type-fest": "^4.41.0",
-        "typescript": "~5.6.3",
+        "typescript": "~5.9.3",
+        "typescript-eslint": "^8.46.2",
         "vite": "^7.1.12",
-        "vite-plugin-eslint": "^1.8.1",
+        "vite-plugin-checker": "^0.8.0",
         "vite-plugin-svgr": "^4.5.0",
         "vite-tsconfig-paths": "^5.1.4"
     }
