Add recommended airbnb eslint packages
Signed-off-by: achour94 <berrahmaachour@gmail.com>

--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
         "@babel/preset-env": "^7.28.3",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
+        "@eslint/compat": "^1.4.1",
         "@eslint/js": "^9.38.0",
+        "@stylistic/eslint-plugin": "^3.1.0",
         "@types/core-js": "^2.5.8",
         "@types/eslint": "^8.56.12",
         "@types/eslint-config-prettier": "^6.11.3",
