--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
         "react-redux": "^9.2.0",
         "react-resizable": "^3.0.5",
         "react-resizable-panels": "^3.0.6",
+        "react-rnd": "^10.5.2",
         "react-router": "^7.8.2",
         "react-virtualized-auto-sizer": "^1.0.26",
         "react-window": "^2.2.1",
         "reconnecting-websocket": "^4.4.0",
         "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
         "typeface-roboto": "^1.1.13",
         "uuid": "^13.0.0",
         "yup": "^1.7.0"
