--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@gridsuite/commons-ui": "0.139.0",
+        "@gridsuite/commons-ui": "file:../commons-ui/gridsuite-commons-ui-0.140.0.tgz",
         "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^4.1.3",
         "@mui/icons-material": "^5.18.0",
@@ -22,7 +22,7 @@
         "@mui/material": "^5.18.0",
         "@mui/x-charts": "^7.29.1",
         "@mui/x-tree-view": "^7.29.1",
-        "@powsybl/network-viewer": "2.0.0",
+        "@powsybl/network-viewer": "3.0.1",
         "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
         "@xyflow/react": "^12.8.4",
@@ -36,9 +36,9 @@
         "mui-nested-menu": "^4.0.1",
         "plotly.js-basic-dist-min": "^2.35.3",
         "qs": "^6.14.0",
-        "react": "^18.3.1",
+        "react": "^19.2.0",
         "react-csv-downloader": "^3.3.0",
-        "react-dom": "^18.3.1",
+        "react-dom": "^19.2.0",
         "react-grid-layout": "^1.5.2",
         "react-hook-form": "^7.62.0",
         "react-intl": "^7.1.11",
@@ -101,8 +101,8 @@
         "@types/node": "^22.18.1",
         "@types/plotly.js-basic-dist-min": "^2.12.4",
         "@types/qs": "^6.14.0",
-        "@types/react": "^18.3.24",
-        "@types/react-dom": "^18.3.7",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.1",
         "@types/react-grid-layout": "^1.3.5",
         "@types/react-plotly.js": "^2.6.3",
         "@types/react-resizable": "^3.0.8",
