--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react-redux": "^9.2.0",
         "react-resizable": "^3.0.5",
         "react-resizable-panels": "^3.0.6",
+        "react-rnd": "^10.5.2",
         "react-router": "^7.8.2",
         "react-virtualized-auto-sizer": "^1.0.26",
         "react-window": "^2.2.1",
