Fix @reduxjs/toolkit to version 2.9.0, to avoid upgrading it in package-lock, due to the upgrade to react 19
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "npm": "^10.9.2"
     },
     "_comments": {
-        "rimraf": "TEMP: Required by @powsybl/network-viewer@2.x postinstall script to fix deck.gl@8 type conflicts. Remove when upgrading to network-viewer with deck.gl@9"
+        "rimraf": "TEMP: Required by @powsybl/network-viewer@2.x postinstall script to fix deck.gl@8 type conflicts. Remove when upgrading to network-viewer with deck.gl@9",
+        "@reduxjs/toolkit": "Version is fixed to 2.9.0, because the react 19 upgrade this package, and it causes pbs with in place modifications of objects stored in the redux store"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
@@ -23,7 +24,7 @@
         "@mui/x-charts": "^7.29.1",
         "@mui/x-tree-view": "^7.29.1",
         "@powsybl/network-viewer": "3.0.1",
-        "@reduxjs/toolkit": "^2.9.0",
+        "@reduxjs/toolkit": "2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
         "@xyflow/react": "^12.8.4",
         "ag-grid-community": "^33.1.0",
