--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@gridsuite/commons-ui": "file:../commons-ui/gridsuite-commons-ui-0.140.0.tgz",
+        "@gridsuite/commons-ui": "0.140.0",
         "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^4.1.3",
         "@mui/icons-material": "^5.18.0",
@@ -23,8 +23,8 @@
         "@mui/material": "^5.18.0",
         "@mui/x-charts": "^7.29.1",
         "@mui/x-tree-view": "^7.29.1",
-        "@powsybl/network-viewer": "3.0.1",
-        "@reduxjs/toolkit": "2.9.0",
+        "@powsybl/network-viewer": "2.0.0",
+        "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
         "@xyflow/react": "^12.8.4",
         "ag-grid-community": "^33.1.0",
