--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
-        "@gridsuite/commons-ui": "0.143.0",
+        "@gridsuite/commons-ui": "file:../commons-ui/gridsuite-commons-ui-0.143.0.tgz",
         "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^4.1.3",
         "@mui/icons-material": "^5.18.0",
         "@mui/lab": "5.0.0-alpha.175",
         "@mui/material": "^5.18.0",
-        "@mui/x-charts": "^7.29.1",
-        "@mui/x-tree-view": "^7.29.1",
+        "@mui/x-charts": "^8.21.0",
+        "@mui/x-tree-view": "^8.21.0",
         "@powsybl/network-viewer": "3.0.1",
         "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
