--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,14 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "compilerOptions": {
+            "baseUrl": "src",
+            "paths": {
+                "@gridsuite/commons-ui": ["../../commons-ui/src"],
+                "@gridsuite/commons-ui/*": ["../../commons-ui/src/*"]
+            }
+        }
     },
     "include": [
         "src",
