--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "npm": "^11.6.2"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@gridsuite/commons-ui": "0.163.0",
@@ -22,6 +25,8 @@
         "@powsybl/network-viewer": "3.1.0",
         "@reduxjs/toolkit": "^2.9.0",
         "@svgdotjs/svg.js": "^3.2.4",
+        "@tanstack/react-table": "^8.21.3",
+        "@tanstack/react-virtual": "^3.13.18",
         "@xyflow/react": "^12.8.4",
         "ag-grid-community": "^33.1.0",
         "ag-grid-react": "^33.3.2",
