chore(): update tsconfig to detect bad functional typing
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
+        "strictFunctionTypes": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
         "module": "esnext",
